<resources>
    <string name="app_name">Movie Made</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="something_wrong">Oops.. something wrong</string>
    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="title_favorite">Favorite</string>
    <string name="no_data">Empty data</string>
    <string name="search_movie">Search Movie</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="sort_title">Sort movie by</string>
    <string name="not_found">Movie not found</string>
    <string name="overview">Overview</string>
    <string name="date">date</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="adult">Adult</string>
    <string name="language">Language</string>
    <string name="popularity">Popularity</string>
    <string name="vote_count">Vote Count</string>
    <string name="share_movie">Share this movie now</string>
    <string name="share_text">Watch %s now with me!</string>
    <string name="splashscreen_image">Splashscreen Image</string>
</resources>